# CPSC-402

./: README.md  hello.cc
Assignment1/: Cpp.cf
Assignment2/: TypeChecker.hs
Assignment3/: CPPInterpreter.cabal  README.md
Assignment3/src/: Interpreter.hs  Interpreter_v_gamma.hs
Assignment4/: LICENSE  README.md  drop.cc  package.json
Assignment4/mytest/: no-drop.cc
Assignment4/src/: Compiler.hs
Assignment4/test/: ass_in_arith-short.cc  env.h  fibonacci.cc  fibonacci.md  redeclare-in-if-1.cc  redeclare-in-if.cc  return-in-while-1.cc  return-in-while-2.cc  return-in-while.cc  setup.sh  wat2wasm.js
Assignment4/test/wat-programs/: ass_in_arith.wat  fibonacci.wat  redeclare-in-if-1.wat  redeclare-in-if.wat  return-in-while-1.wat  return-in-while-2.wat  return-in-while.wat
