name:                CPPInterpreter
version:             0.1.0.0
author:              Samuel Balco with modifications by Alexander Kurz
maintainer:          "alexhkurz@gmail.com"
copyright:           Samuel Balco and Alexander Kurz
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

library
  exposed-modules:
      AbsCPP
      ErrM
      Interpreter
      LexCPP
      ParCPP
      PrintCPP
      TypeChecker
  other-modules:
      Paths_CPPInterpreter
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , array
    , containers
    , mtl
  default-language: Haskell2010

executable CPPInterpreter-exe
  main-is: Main.hs
  other-modules:
      Paths_CPPInterpreter
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      CPPInterpreter
    , base >=4.7 && <5
    , mtl
  default-language: Haskell2010

test-suite CPPInterpreter-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_CPPInterpreter
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , CPPInterpreter
    , filepath
    , directory
    , mtl
  default-language: Haskell2010

